syntax = "proto3";

package auth;

import "common/base-response.proto";
import "buf/validate/validate.proto";

option go_package = "github/eggnocent/app-grpc-eccomerce/pb/auth";


service AuthService {
    rpc Register(RegisterRequest) returns (RegisterResponse);
}

message RegisterRequest {
    string full_name = 1 [(buf.validate.field).string = {min_len: 1, max_len: 255}];
    string email = 2 [(buf.validate.field).string = {email: true, min_len: 1, max_len: 255}];
    string password = 3 [(buf.validate.field).string = {min_len: 1, max_len: 255}];
    string password_confirmation = 4 [(buf.validate.field).string = {min_len: 1, max_len: 255}];
}

message RegisterResponse {
    common.BaseResponse base = 1;
}